# piscine_python

./: .gitignore  README.md  todo.md
0-starting/: Makefile  README.md
0-starting/ex00/: Hello.py
0-starting/ex01/: format_ft_time.py
0-starting/ex02/: find_ft_type.py  tester.py
0-starting/ex03/: NULL_not_found.py  tester.py
0-starting/ex04/: make_tester.py  tester.py  tester_utils.py  whatis.py
0-starting/ex05/: building.py  make_tester.py  tester.py  tester_utils.py
0-starting/ex06/: filterstring.py  ft_filter.py  make_tester.py  tester.py  tester_utils.py
0-starting/ex07/: make_tester.py  sos.py  tester.py
0-starting/ex08/: Loading.py  make_tester.py  tester.py  tester_builtin.py  tester_mine.py
0-starting/ex09/: LICENSE  README.md  pyproject.toml  setup.py
0-starting/ex09/ft_package/: __init__.py  count_in_list.py
0-starting/ex09/src/ft_package/: count_in_list.py
0-starting/ex09/test/: tester.py
0-starting/packaging_tutorial/: pyproject.toml
0-starting/packaging_tutorial/src/example_package_znogueir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
1-array/: Makefile  README.md  quest.md  requirements.txt
1-array/ex00/: give_bmi.py  tester.py
1-array/ex01/: array2D.py  tester.py
1-array/ex02/: load_image.py
1-array/ex03/: load_image.py  zoom.py
1-array/ex04/: load_image.py  rotate.py
1-array/ex05/: pimp_image.py  tester.py
2-datatable/: README.md
3-oop/: Makefile  README.md
4-dod/: README.md
4-dod/ex00/: main.py  statistics.py
4-dod/ex01/: in_out.py  main.py
4-dod/ex02/: callLimit.py  tester.py
(+2 files in other folders)
