[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    { name="eagle", email="eagle@42.fr" }
]
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://githbu.com/eagle/ft_package"
