[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_znogueir"
version = "0.0.1"
authors = [
	{ name="zachary nogueira", email="zachary.nogueira@gmail.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://githbu.com/pypa/sampleproject"
Issues = "https://githbu.com/pypa/sampleproject/issues"
